--- a/css/style-bata.css
+++ b/css/style-bata.css
@@ -2194,3 +2194,11 @@ body ul.main-section-links ul.main-section-sublinks > li > a {font-family: "Rale
         border-top: none;
     }
 }
+
+/* Fix Bata MAP */
+#pk_customlinks li.pk_account.custom_link_added > a{
+	background: none !important;
+}
+.pk_account .indent, .pk_account .dd_container {
+    display: none !important;
+}
